--- a/style/css/headStyle.css
+++ b/style/css/headStyle.css
@@ -1,43 +1,44 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 body, html {
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 header {
   position: fixed;
   background-color: #2e2e2e;
-  width: 100%;
-}
-header nav {
-  width: 1100px;
-  margin: auto;
-}
-header nav ul {
-  width: 500px;
-  -ms-flex-pack: distribute;
+  width: 100%; }
+  header nav {
+    width: 1100px;
+    margin: auto; }
+    header nav ul {
+      width: 500px;
       justify-content: space-around;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-header nav ul li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-header nav ul li a {
-  color: white;
-  font-family: 'Open Sans', sans-serif;
-  text-decoration: none;
-}
+      display: flex;
+      flex-direction: row; }
+      header nav ul li {
+        display: flex;
+        flex-direction: row; }
+        header nav ul li a {
+          color: white;
+          font-family: 'Open Sans', sans-serif;
+          text-decoration: none; }
+
+.posts {
+  position: relative;
+  top: 60px;
+  width: 800px;
+  margin: auto; }
+  .posts .post {
+    border: 1px solid gray;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    font-family: 'Open Sans', sans-serif; }
+    .posts .post p {
+      padding: 10px;
+      padding-top: 0; }
+    .posts .post h2 {
+      color: #339bfd;
+      font-size: 20px;
+      padding: 10px; }
 
 /*# sourceMappingURL=headStyle.css.map */
