--- a/style/css/headStyle.css
+++ b/style/css/headStyle.css
@@ -6,7 +6,8 @@ body, html {
 header {
   position: fixed;
   background-color: #2e2e2e;
-  width: 100%; }
+  width: 100%;
+  z-index: 1000; }
   header nav {
     width: 1100px;
     margin: auto; }
@@ -25,20 +26,34 @@ header {
 
 .posts {
   position: relative;
-  top: 60px;
+  top: 70px;
   width: 800px;
   margin: auto; }
-  .posts .post {
+  .posts .postCatalog {
     border: 1px solid gray;
     border-radius: 10px;
     margin-bottom: 15px;
     font-family: 'Open Sans', sans-serif; }
-    .posts .post p {
+    .posts .postCatalog p {
       padding: 10px;
       padding-top: 0; }
-    .posts .post h2 {
+    .posts .postCatalog h2 {
       color: #339bfd;
       font-size: 20px;
       padding: 10px; }
+
+.post {
+  position: relative;
+  top: 70px;
+  width: 800px;
+  margin: auto;
+  position: relative; }
+  .post h1 {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif; }
+  .post p {
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 40px; }
 
 /*# sourceMappingURL=headStyle.css.map */
