--- a/style/css/headStyle.css
+++ b/style/css/headStyle.css
@@ -43,7 +43,7 @@ header {
       padding: 10px; }
 
 .post {
-  position: relative;
+  position: absolute;
   top: 70px;
   width: 800px;
   margin: auto;
@@ -54,6 +54,12 @@ header {
   .post p {
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
-    margin-bottom: 40px; }
+    padding-bottom: 30px; }
+
+.comments {
+  position: relative;
+  top: 30px;
+  width: 800px;
+  margin: auto; }
 
 /*# sourceMappingURL=headStyle.css.map */
